--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "author": "Alejandra Colcha <da.colcha@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.8.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "axios": "^1.12.2",
     "cheerio": "^1.1.2"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
