add: implementing api with express

--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/express": "^5.0.3",
     "axios": "^1.12.2",
-    "cheerio": "^1.1.2"
+    "cheerio": "^1.1.2",
+    "express": "^5.1.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node src/main.ts",
+    "build": "tsc"
   }
 }
