--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "target": "ESNext",
+    "outDir": "./dist",
     "types": [],
     
     "sourceMap": true,
@@ -10,11 +11,9 @@
     "declarationMap": true,
 
     "esModuleInterop": true,
-    "emitDeclarationOnly": true,
 
     "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-    "allowImportingTsExtensions": true,
+    "exactOptionalPropertyTypes": true,   
 
     "strict": true,
     "jsx": "react-jsx",
@@ -25,4 +24,5 @@
     "strictNullChecks": true
   },
   "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "test"]
 }
