--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,6 +4,9 @@ name: Deploy static content to Pages
 on:
   push:
     branches: ["main"]
+    paths:
+      - 'public/**'
+      - '.github/workflows/static.yml'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
