fix: set sonar organization

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -47,9 +47,10 @@ jobs:
         with:
           args:
             -Dsonar.projectKey=DaColcha_web-crawler
+            -Dsonar.organization=dacolcha16
             -Dsonar.sources=src
             -Dsonar.tests=test
-            
+
       - name: Build Docker image
         run: docker build -t dacolcha/web-crawler-api:latest .  
 
