--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test --coverage
+        run: npm test
 
       - name: SonarQube Scan  
         uses: SonarSource/sonarqube-scan-action@v6
