--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -43,13 +43,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
         with:
           args:
             -Dsonar.projectKey=DaColcha_web-crawler
             -Dsonar.organization=dacolcha16
             -Dsonar.sources=src
             -Dsonar.tests=test
+            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info
 
       - name: Build Docker image
         run: docker build -t dacolcha/web-crawler-api:latest .  
